--- a/aoptest/pom.xml
+++ b/aoptest/pom.xml
@@ -21,6 +21,14 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${org.springframework-version}</version>
-		</dependency>		
+		</dependency>	
+		
+		<!-- spring aspect -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-aspects</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+			
 	</dependencies>
 </project>
