--- a/aoptest/pom.xml
+++ b/aoptest/pom.xml
@@ -6,6 +6,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>aoptest</artifactId>
+	<packaging>jar</packaging>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,7 +29,10 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-aspects</artifactId>
 		    <version>${org.springframework-version}</version>
-		</dependency>
-			
+		</dependency>			
 	</dependencies>
+	
+	<build>
+		<finalName>aoptest</finalName>
+	</build>
 </project>
